@@ -28,7 +28,6 @@ import org.kiji.annotations.ApiStability;
 import org.kiji.mapreduce.kvstore.KeyValueStoreReader;
 import org.kiji.mapreduce.kvstore.KeyValueStoreReaderFactory;
 import org.kiji.mapreduce.produce.ProducerContext;
-import org.kiji.schema.AtomicKijiPutter;
 import org.kiji.schema.EntityId;
 import org.kiji.schema.KijiColumnName;
 
@@ -43,7 +42,9 @@ public final class KijiFreshProducerContext implements ProducerContext {
   private final KeyValueStoreReaderFactory mFactory;
   private final String mFamily;
   private final String mQualifier;
-  private final AtomicKijiPutter mWriter;
+  private final MultiBufferedWriter mWriter;
+  private final EntityId mEntityId;
+  private final String mBufferName;
 
   /**
    * Set by InternalFreshKijiTableReader after Producer.producer() returns to indicate that there
@@ -62,19 +63,26 @@ public final class KijiFreshProducerContext implements ProducerContext {
    * (org.kiji.schema.KijiColumnName, org.kiji.schema.EntityId,
    * org.kiji.mapreduce.kvstore.KeyValueStoreReaderFactory, org.kiji.schema.KijiBufferedWriter)}.
    *
+   * @param bufferName the name of the buffer into which this context should write.  This buffer
+   * name should be shared by all contexts whose writes should be committed together.  When partial
+   * freshening is allowed each context should have a unique buffer name (generated in
+   * {@link InternalFreshKijiTableReader} by incrementing an AtomicLong).  When partial freshening
+   * is disallowed, all contexts for a single get() request will share a buffer name.
    * @param outputColumn the target column.
    * @param eid the target EntityId.
    * @param factory a factory of kv-serialize readers.
-   * @param writer the KijiBufferedWriter to be used by this Context to perform put() calls.  May be
-   * shared by multiple contexts if partial freshening is disallowed.
+   * @param writer the MultiBufferedWriter to be used by this Context to perform put() calls.
    * @throws IOException in case of an error opening a connection to the underlying table.
    */
   private KijiFreshProducerContext(
-      KijiColumnName outputColumn,
-      EntityId eid,
-      KeyValueStoreReaderFactory factory,
-      AtomicKijiPutter writer)
+      final String bufferName,
+      final KijiColumnName outputColumn,
+      final EntityId eid,
+      final KeyValueStoreReaderFactory factory,
+      final MultiBufferedWriter writer)
       throws IOException {
+    mBufferName = bufferName;
+    mEntityId = eid;
     mWriter = writer;
     mFamily = Preconditions.checkNotNull(outputColumn.getFamily());
     mQualifier = outputColumn.getQualifier();
@@ -84,73 +92,58 @@ public final class KijiFreshProducerContext implements ProducerContext {
 
   /**
    * Create a new KijiFreshProducerContext configured to write to a specific column and row using a
-   * given KijiBufferedWriter.
+   * given MultiBufferedWriter.
    *
+   * @param bufferName the name of the buffer into which this context should write.  This buffer
+   * name should be shared by all contexts whose writes should be committed together.  When partial
+   * freshening is allowed each context should have a unique buffer name (generated in
+   * {@link InternalFreshKijiTableReader} by incrementing an AtomicLong).  When partial freshening
+   * is disallowed, all contexts for a single get() request will share a buffer name.
    * @param outputColumn the column to which to write.
    * @param eid the EntityId of the row to which to write.
    * @param factory a factory of kv-serialize readers.
-   * @param writer the KijiBufferedWriter to be used by this Context to perform put() calls.  May be
-   * shared by multiple contexts if partial freshening is disallowed.
+   * @param writer the MultiBufferedWriter to be used by this Context to perform put() calls.
    * @return a new KijiFreshProducerContext configured to write to a specific column and row using a
-   * given KijiBufferedWriter.
+   * given MultiBufferedWriter.
    * @throws IOException in case of an error opening a connection to the underlying table.
    */
   public static KijiFreshProducerContext create(
-      KijiColumnName outputColumn,
-      EntityId eid,
-      KeyValueStoreReaderFactory factory,
-      AtomicKijiPutter writer)
+      final String bufferName,
+      final KijiColumnName outputColumn,
+      final EntityId eid,
+      final KeyValueStoreReaderFactory factory,
+      final MultiBufferedWriter writer)
       throws IOException {
-    return new KijiFreshProducerContext(outputColumn, eid, factory, writer);
+    return new KijiFreshProducerContext(bufferName, outputColumn, eid, factory, writer);
   }
 
-  /**
-   * Producer contexts used for freshening will be configured to write to the column where the
-   * freshness policy is attached, rather than the column returned by
-   * {@link KijiProducer#getOutputColumn()}.
-   * {@inheritDoc}
-   */
+  /** {@inheritDoc} */
   @Override
   public <T> void put(final T value) throws IOException {
     put(HConstants.LATEST_TIMESTAMP, value);
   }
 
-  /**
-   * Producer contexts used for freshening will be configured to write to the column where the
-   * freshness policy is attached, rather than the column returned by
-   * {@link KijiProducer#getOutputColumn()}.
-   * {@inheritDoc}
-   */
+  /** {@inheritDoc} */
   @Override
   public <T> void put(final long timestamp, final T value) throws IOException {
     if (mWriter == null) {
       throw new UnsupportedOperationException("Writing in producer setup and cleanup methods is "
           + "unsupported.");
     } else {
-      mWriter.put(mFamily, Preconditions.checkNotNull(
+      mWriter.put(mBufferName, mEntityId, mFamily, Preconditions.checkNotNull(
           mQualifier, "Output column is a map type family, use put(qualifier, timestamp, value)"),
           timestamp, value);
       mHasReceivedWrites = true;
     }
   }
 
-  /**
-   * Producer contexts used for freshening will be configured to write to the column where the
-   * freshness policy is attached, rather than the column returned by
-   * {@link KijiProducer#getOutputColumn()}.
-   * {@inheritDoc}
-   */
+  /** {@inheritDoc} */
   @Override
   public <T> void put(final String qualifier, final T value) throws IOException {
     put(qualifier, HConstants.LATEST_TIMESTAMP, value);
   }
 
-  /**
-   * Producer contexts used for freshening will be configured to write to the column where the
-   * freshness policy is attached, rather than the column returned by
-   * {@link KijiProducer#getOutputColumn()}.
-   * {@inheritDoc}
-   */
+  /** {@inheritDoc} */
   @Override
   public <T> void put(final String qualifier, final long timestamp, final T value)
       throws IOException {
@@ -160,7 +153,7 @@ public final class KijiFreshProducerContext implements ProducerContext {
       throw new UnsupportedOperationException("Writing in producer setup and cleanup methods is "
           + "unsupported.");
     } else {
-      mWriter.put(mFamily, qualifier, timestamp, value);
+      mWriter.put(mBufferName, mEntityId, mFamily, qualifier, timestamp, value);
       mHasReceivedWrites = true;
     }
   }
@@ -174,7 +167,12 @@ public final class KijiFreshProducerContext implements ProducerContext {
   /** {@inheritDoc} */
   @Override
   public void flush() throws IOException {
-    mWriter.commit();
+    if (mWriter == null) {
+      throw new UnsupportedOperationException("Flushing in producer setup and cleanup methods is "
+          + "unsupported.");
+    } else {
+      mWriter.flush(mBufferName);
+    }
   }
 
   /**
