@@ -1,6 +1,8 @@
 
                               Kiji Scoring Release Notes
 Version 0.4.0
+  * SCORE-69. Local FreshKijiTableReader now creates only one table connection for all write
+      operations.
   * SCORE-32. NewerThan now exposes a getter getNewerThanTimeInMillis() to retrieve the configured
       time before which data is considered stale.
   * SCORE-52. FreshTool now accepts File paths for policy state using the --policy-state-file flag.
